--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ h1{
   line-height:1.25;
 }
 
-/* Buttons playground */
+/* Buttons area */
 .buttons{
   position:relative;
   width:100%;
-  min-height:220px;
+  min-height:240px;
   display:flex;
   justify-content:center;
   align-items:center;
@@ -111,7 +111,7 @@ button{
   transition:transform .2s ease, box-shadow .2s ease;
   box-shadow:0 0 12px rgba(255,77,109,.4);
   position:relative;
-  z-index:2; /* always above NO */
+  z-index:2;
 }
 
 /* NO */
@@ -119,6 +119,7 @@ button{
   background:#eee;
   color:#333;
   transition:left .08s linear, top .08s linear;
+  position:absolute;
   z-index:1;
 }
 
@@ -184,28 +185,26 @@ canvas{
 /* Typewriter */
 const text="Bubu will you be my valentine?";
 const q=document.getElementById("question");
-let i=0, typingActive=true;
+let i=0, typing=true;
 (function type(){
-  if(!typingActive) return;
+  if(!typing) return;
   if(i<text.length){
-    q.innerHTML+=text.charAt(i++);
+    q.textContent+=text[i++];
     setTimeout(type,70);
   }
 })();
 
-/* YES grows every hover */
+/* YES grows gradually */
 const yesBtn=document.getElementById("yesBtn");
 let yesScale=1;
-
 function growYes(){
   yesScale=Math.min(yesScale+0.03,1.25);
   yesBtn.style.transform=`scale(${yesScale})`;
-  yesBtn.style.boxShadow=`0 0 ${12+yesScale*10}px rgba(255,77,109,.8)`;
 }
 yesBtn.addEventListener("mouseenter",growYes);
 yesBtn.addEventListener("touchstart",growYes);
 
-/* NO moves fast, far & avoids YES */
+/* NO movement — FINAL FIX */
 const noBtn=document.getElementById("noBtn");
 const buttons=document.getElementById("buttons");
 let moving=false;
@@ -216,11 +215,11 @@ function moveNo(){
 
   const c=buttons.getBoundingClientRect();
   const y=yesBtn.getBoundingClientRect();
-  const pad=20, buffer=40;
+  const pad=20, buffer=50;
 
-  let x,yPos,ok=false;
+  let x,yPos,tries=0,ok=false;
 
-  while(!ok){
+  while(!ok && tries<20){
     x=Math.random()*(c.width-noBtn.offsetWidth-pad*2)+pad;
     yPos=Math.random()*(c.height-noBtn.offsetHeight-pad*2)+pad;
 
@@ -232,13 +231,20 @@ function moveNo(){
       l > y.right+buffer ||
       b < y.top-buffer ||
       t > y.bottom+buffer;
+
+    tries++;
   }
 
-  noBtn.style.position="absolute";
+  /* fallback if space tight */
+  if(!ok){
+    x = Math.random() > 0.5 ? pad : c.width - noBtn.offsetWidth - pad;
+    yPos = Math.random() > 0.5 ? pad : c.height - noBtn.offsetHeight - pad;
+  }
+
   noBtn.style.left=x+"px";
   noBtn.style.top=yPos+"px";
 
-  setTimeout(()=>moving=false,50);
+  setTimeout(()=>moving=false,60);
 }
 
 noBtn.addEventListener("mouseover",moveNo);
@@ -282,8 +288,8 @@ function drawHeart(x,y,s,a){
 
 /* YES click */
 yesBtn.onclick=()=>{
-  typingActive=false;
-  q.innerText="YAY 💖 It’s a date!  Best Decision Everrrrr...!!!!";
+  typing=false;
+  q.textContent="YAY 💖 It’s a date!";
   document.getElementById("dpImg").src="./kiss.gif";
   buttons.style.display="none";
   document.getElementById("hint").style.display="none";
