Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -67,9 +67,6 @@ body{
   border:4px solid #ff4d6d;
   animation:glowPulse 3s infinite;
 }
-.dp.bounce{
-  animation:bounceOnce .8s ease,glowPulse 3s infinite;
-}
 .dp img{
   width:100%;
   height:100%;
@@ -81,18 +78,9 @@ h1{
   font-size:22px;
   min-height:56px;
   margin:10px 0 14px;
-  line-height:1.25;
 }
 
-/* Center */
-.center{
-  width:100%;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-
-/* Buttons playground */
+/* Buttons area */
 .buttons{
   position:relative;
   width:100%;
@@ -118,6 +106,8 @@ button{
   color:#fff;
   transition:transform .2s ease, box-shadow .2s ease;
   box-shadow:0 0 12px rgba(255,77,109,.4);
+  position:relative;
+  z-index:2;
 }
 
 /* NO */
@@ -125,6 +115,8 @@ button{
   background:#eee;
   color:#333;
   transition:left .08s linear, top .08s linear;
+  position:absolute;
+  z-index:1;
 }
 
 /* JWM */
@@ -146,7 +138,6 @@ button{
   font-weight:600;
   color:#ff4d6d;
   background:#fff0f4;
-  display:inline-block;
   padding:8px 14px;
   border-radius:999px;
 }
@@ -167,21 +158,19 @@ canvas{
 
 <div class="card">
 
-  <div class="dp" id="dp">
+  <div class="dp">
     <img id="dpImg" src="./dp.gif" alt="DP">
   </div>
 
   <h1 id="question"></h1>
 
-  <div class="center">
-    <div class="buttons" id="buttons">
-      <button id="yesBtn">Yes</button>
-      <button id="noBtn">No</button>
-    </div>
+  <div class="buttons" id="buttons">
+    <button id="yesBtn">Yes</button>
+    <button id="noBtn">No</button>
+  </div>
 
-    <div class="jwm" id="jwm">
-      <img src="./jwm.gif" alt="Love">
-    </div>
+  <div class="jwm" id="jwm">
+    <img src="./jwm.gif" alt="Love">
   </div>
 
   <div class="hint" id="hint">No seems lil shy... 😁😈</div>
@@ -191,29 +180,27 @@ canvas{
 /* Typewriter */
 const text="Bubu will you be my valentine?";
 const q=document.getElementById("question");
-let i=0, typingActive=true;
+let i=0;
 (function type(){
-  if(!typingActive) return;
   if(i<text.length){
-    q.innerHTML+=text.charAt(i++);
+    q.textContent+=text[i++];
     setTimeout(type,70);
   }
 })();
 
-/* YES grows slightly every hover */
+/* YES grows */
 const yesBtn=document.getElementById("yesBtn");
-let yesScale = 1;
+let yesScale=1;
+yesBtn.addEventListener("mouseenter",()=>{
+  yesScale=Math.min(yesScale+0.03,1.25);
+  yesBtn.style.transform=`scale(${yesScale})`;
+});
+yesBtn.addEventListener("touchstart",()=>{
+  yesScale=Math.min(yesScale+0.03,1.25);
+  yesBtn.style.transform=`scale(${yesScale})`;
+});
 
-function growYes(){
-  yesScale = Math.min(yesScale + 0.03, 1.25); // cap growth
-  yesBtn.style.transform = `scale(${yesScale})`;
-  yesBtn.style.boxShadow = `0 0 ${12 + yesScale*10}px rgba(255,77,109,.8)`;
-}
-
-yesBtn.addEventListener("mouseenter", growYes);
-yesBtn.addEventListener("touchstart", growYes);
-
-/* NO button — fast & far */
+/* NO movement — collision-safe */
 const noBtn=document.getElementById("noBtn");
 const buttons=document.getElementById("buttons");
 let moving=false;
@@ -222,23 +209,42 @@ function moveNo(){
   if(moving) return;
   moving=true;
 
-  const r = buttons.getBoundingClientRect();
-  const pad = 20;
+  const c=buttons.getBoundingClientRect();
+  const y=yesBtn.getBoundingClientRect();
+  const pad=20, buffer=40;
 
-  noBtn.style.position="absolute";
+  let x,yPos,tries=0,ok=false;
 
-  const maxX = r.width - noBtn.offsetWidth - pad;
-  const maxY = r.height - noBtn.offsetHeight - pad;
+  while(!ok && tries<20){
+    x=Math.random()*(c.width-noBtn.offsetWidth-pad*2)+pad;
+    yPos=Math.random()*(c.height-noBtn.offsetHeight-pad*2)+pad;
 
-  noBtn.style.left = Math.random()*maxX + pad + "px";
-  noBtn.style.top  = Math.random()*maxY + pad + "px";
+    const l=c.left+x, t=c.top+yPos;
+    const r=l+noBtn.offsetWidth, b=t+noBtn.offsetHeight;
 
-  setTimeout(()=>moving=false,50);
+    ok =
+      r < y.left-buffer ||
+      l > y.right+buffer ||
+      b < y.top-buffer ||
+      t > y.bottom+buffer;
+
+    tries++;
+  }
+
+  if(!ok){
+    x = Math.random()>0.5 ? pad : c.width-noBtn.offsetWidth-pad;
+    yPos = Math.random()>0.5 ? pad : c.height-noBtn.offsetHeight-pad;
+  }
+
+  noBtn.style.left=x+"px";
+  noBtn.style.top=yPos+"px";
+
+  setTimeout(()=>moving=false,60);
 }
 
-noBtn.addEventListener("mouseover", moveNo);
-noBtn.addEventListener("mousemove", moveNo);
-noBtn.addEventListener("touchstart", moveNo);
+noBtn.addEventListener("mouseover",moveNo);
+noBtn.addEventListener("mousemove",moveNo);
+noBtn.addEventListener("touchstart",moveNo);
 
 /* Hearts */
 const canvas=document.getElementById("hearts");
@@ -262,10 +268,10 @@ function drawHeart(x,y,s,a){
   ctx.fill();
   ctx.restore();
 }
-function animate(){
+(function animate(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  if(raining && Math.random()<.25){
-    hearts.push({x:Math.random()*canvas.width,y:-20,s:12+Math.random()*10,v:1+Math.random()*1.5,d:Math.random()-0.5,a:1});
+  if(raining&&Math.random()<.25){
+    hearts.push({x:Math.random()*canvas.width,y:-20,s:12+Math.random()*10,v:1+Math.random()*1.5,d:Math.random()-.5,a:1});
   }
   hearts.forEach(h=>{
     h.y+=h.v; h.x+=h.d; h.a-=.003;
@@ -273,13 +279,11 @@ function animate(){
   });
   hearts=hearts.filter(h=>h.a>0);
   requestAnimationFrame(animate);
-}
-animate();
+})();
 
 /* YES click */
 yesBtn.onclick=()=>{
-  typingActive=false;
-  q.innerText="YAY 💖 It’s a date!  Best Decision Everrrrr...!!!!";
+  q.textContent="YAY 💖 It’s a date!";
   document.getElementById("dpImg").src="./kiss.gif";
   buttons.style.display="none";
   document.getElementById("hint").style.display="none";
@@ -287,7 +291,7 @@ yesBtn.onclick=()=>{
   raining=true;
 
   setTimeout(()=>{
-    window.location.href =
+    window.location.href=
       "https://api.whatsapp.com/send?phone=919788480008&text=I%20tried%20to%20say%20no...%20but%20YES%20%F0%9F%98%82%E2%9D%A4%EF%B8%8F";
   },10000);
 };
